# fty-common-logging

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  ci_dependencies.sh  fty_common_logging.pc.in
doc/: asciidoc.conf
include/: fty_common_logging_library.h  fty_log.h
include/fty-log/: fty_coverity_stub.h  fty_logger.h
packaging/debian/: changelog  control  copyright  libfty-common-logging-dev.install  libfty-common-logging1.install
packaging/redhat/: fty-common-logging.spec
src/: fty_common_logging_classes.h  fty_common_logging_private_selftest.cc  fty_common_logging_selftest.cc  fty_logger.cpp
src/fty-log/: fty_logger.cc
test/: main.cpp
